--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buddhabank",
-  "homepage": "https://github.com/Francis-Song/buddhabank",
+  "homepage": "https://francis-song.github.io/buddhabank/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
